[package]
name = "cryptopro-rust"
version = "0.1.2"
authors = ["MaratWorker <maratn566ek@gmail.com>"]
edition = "2018"
description = "Easy crypto binding"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen="*"

[dependencies]
libc="*"
